fix: prevent vertical overflow on smaller screens

--- a/src/components/chatView.scss
+++ b/src/components/chatView.scss
@@ -199,8 +199,8 @@ $chatbotPosition: $sizeS;
   .vrcbChatbotWrapper {
     right: 0;
     bottom: 0;
-    height: 100vh;
-    max-height: 100vh;
+    height: 100%;
+    max-height: 100%;
     border-radius: 0;
     border: none;
     border-left: 1px solid $borderColor;
